--- a/CSS/registro.css
+++ b/CSS/registro.css
@@ -7,7 +7,10 @@ html {
 }
 
 body {
-  background: #F2F3EB;
+  background-image: linear-gradient(-225deg, #F2E7AF 0%, #EDC05F 100%);
+  background-image: linear-gradient(to top, #F2E7AF 0%, #EDC05F 100%);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 button {
